--- a/strengthstandards/requirements.txt
+++ b/strengthstandards/requirements.txt
@@ -1,39 +1,23 @@
-anyio==3.6.1
-async-generator==1.10
-attrs==21.4.0
-black==22.6.0
+async-generator==1.100
+attrs==22.1.0
 certifi==2022.6.15
 cffi==1.15.1
-click==8.1.3
-colorama==0.4.5
-cryptography==37.0.2
-fastapi==0.78.0
+charset-normalizer==2.1.0
+cryptography==37.0.4
+docopt==0.6.2
 h11==0.13.0
-httptools==0.4.0
 idna==3.3
-mypy-extensions==0.4.3
 outcome==1.2.0
-pathspec==0.9.0
-platformdirs==2.5.2
 pycparser==2.21
-pydantic==1.9.1
 pyOpenSSL==22.0.0
 PySocks==1.7.1
-python-dotenv==0.20.0
-python-multipart==0.0.5
-PyYAML==6.0
+requests==2.28.1
 selenium==4.3.0
-six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
-starlette==0.19.1
 toml==0.10.2
-tomli==2.0.1
 trio==0.21.0
 trio-websocket==0.9.2
-typing_extensions==4.3.0
-urllib3==1.26.9
-uvicorn==0.18.2
-watchfiles==0.15.0
-websockets==10.3
+urllib3==1.26.11
 wsproto==1.1.0
+yarg==0.1.9
